# Crosswords

./: .clang-format  .editorconfig  .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/xyz/lukasz/xword/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/dictionaries/pl_PL/: words.txt
app/src/main/cpp/: dictionary.hpp  native-lib.cpp  native-lib.h  native-lib.hpp  string_utils.hpp  word_node.hpp
app/src/main/cpp/collections/: chunked_map.hpp
app/src/main/cpp/indexing/: anagrams.hpp  missing_letters.hpp  word_index.hpp
app/src/main/cpp/interop/: objects.hpp  pointer_wrapper.hpp  strings.hpp
app/src/main/cpp/memory/: arena.hpp
app/src/main/cpp/utils/: android.hpp  arena.hpp  macros.hpp  memory_pool.hpp  mmap.hpp  utf8.hpp
app/src/main/java/xyz/lukasz/xword/: ActivityBase.kt  CrosswordHelperApplication.kt  DefinitionFragment.kt  Dictionary.kt  LookupType.kt  MainActivity.kt  (+7 more)
app/src/main/res/layout/: activity_define.xml  activity_main.xml  fragment_search.xml  fragment_search_box.xml  fragment_word_definition.xml  item_single_word.xml  single_word_layout.xml
app/src/main/res/menu/: top_app_bar.xml
app/src/main/res/transition/: slide_right.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl-rPL/: strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
(+31 files in other folders)
